--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <link rel="apple-touch-icon" href="/logo192.png"/>
         <link rel="manifest" href="/manifest.json"/>
         <title>Timonsivut</title>
-        <script defer="defer" src="/src/index.js">
+        <script defer="defer" src="/web-ui/src/index.js">
         </script><link href="/static/css/main.073c9b0a.css" rel="stylesheet">
     </head>
     <body>
